--- a/style/styles.css
+++ b/style/styles.css
@@ -210,11 +210,11 @@ justify-content: center;
   padding: 6px;
   border-radius: 3px;
   cursor: pointer;
-  margin-top: 10px;
+  margin: 5px;
 }
 
 .checkout {
-  background-color: rgb(0, 223, 0);
+  background-color: green;
 }
 
 .removeAll {
